--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,37 @@
-# 빌드 및 컴파일 결과 디렉터리 무시
-/target/
-/build/
+# Eclipse/IntelliJ 등 IDE에서 컴파일된 클래스 파일
+# Java 클래스 파일 (Class files)
+**/*.class
 
-# IDE 설정 파일 무시 (Eclipse)
-.project
-.classpath
-.settings/
+# 배포/실행 가능한 아카이브 파일
+# WAR (Web Application ARchive) file
+**/*.war
+# JAR (Java ARchive) file
+**/*.jar
+# EAR (Enterprise ARchive) file
+**/*.ear
 
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-# netbeans
-nbproject/private/
-build/
-nbbuild/
-
-# the dist file could make some problems
-# dist/
-nbdist/
-nbactions.xml
-nb-configuration.xml
-.nb-gradle/
+# IntelliJ IDEA
+.idea/
+*.iml
+*.iws
+*.ipr
+out/
 
 # Eclipse
 .classpath
 .project
 .settings/
+bin/
+tmp/
+# WTP (Web Tools Platform) 관련 임시 파일
+.metadata/
+# Eclipse Web Tools Platform generated files
+.wtpgen/
 
-# Intellij
-.idea/
-*.iml
-*.iws
+# Visual Studio Code (선택 사항)
+.vscode/
 
-# Mac
-.DS_Store
-
-# Maven
-log/
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
+# NetBeans
+nbproject/
+build/
+dist/
