--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/user/movie_mystory_mainpage/mypage_withdraw1_process.jsp=UTF-8
 encoding/<project>=UTF-8
